deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: s3-pods
  labels:
    app: s3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: s3
  template:
    metadata:
      labels:
        app: s3
    spec:
      containers:
      - name: s3
        image: docker.io/mathieuplateforme/mys3:dev-latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
          - containerPort: 8080
        volumeMounts:
          - name: s3-buckets-storage
            mountPath: ./app/buckets
      volumes:
        - name: s3-buckets-storage
          persistentVolumeClaim:
            claimName: s3-pvc
