services.yaml
apiVersion: v1
kind: Service
metadata:
  name: s3-service
  labels:
    app: s3
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: s3
  type: ClusterIP
